--- a/Patient-Api/src/main/resources/application.properties
+++ b/Patient-Api/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=Patient-Api
+
+spring.application.name=Patient-API
+
+#DB
+spring.datasource.url=jdbc:postgresql://localhost:5432/patient
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
