--- a/patient-portel/tsconfig.json
+++ b/patient-portel/tsconfig.json
@@ -22,6 +22,11 @@
     "lib": [
       "ES2022",
       "dom"
+    ],
+    "types": ["jquery"],
+    "typeRoots": [
+      "node_modules/@types",
+      "src/typings"
     ]
   },
   "angularCompilerOptions": {
